[package]
name = "tide-rhai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.5", features = ["unstable"] }
async-trait = "0.1.41"
rhai = { version = "1.11.0", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.64"
http-types = "2.10.0"
log = "0.4.14"
surf = "2.2.0"